pixel art cannon done

--- a/exo 1/index.html
+++ b/exo 1/index.html
@@ -60,8 +60,8 @@
 
 
             //boat
-            ctx.fillStyle ="rgb(128, 128, 128)";
-            ctx.beginPath();
+             ctx.fillStyle ="rgb(128, 128, 128)";
+             ctx.beginPath();
              ctx.moveTo(100, 240);
              ctx.lineTo(150, 240);
              ctx.lineTo(150, 260);
@@ -72,7 +72,15 @@
              ctx.lineTo(120,350);
              ctx.lineTo(100, 240);
              ctx.closePath();
+             ctx.lineWidth = 1;
+             ctx.stroke();
              ctx.fill();
+
+
+              // Définition de la couleur de contour
+         // Définition de la largeur de ligne
+           // Application du remplissage
+
 
             //cabin
              ctx.fillStyle ="rgb(63, 120, 113)";
@@ -86,6 +94,8 @@
              ctx.lineTo(145, 170);
              ctx.lineTo(145, 240);
              ctx.closePath();
+             ctx.lineWidth = 1;
+             ctx.stroke();
              ctx.fill();
 
              ctx.fillStyle = "rgb(0, 0, 0)";
@@ -104,7 +114,7 @@
            ctx.fillRect (170, 270, 20, 50);
           }
 
-          
+
 
 
         </script>
