--- a/piou-piou/index.html
+++ b/piou-piou/index.html
@@ -59,7 +59,122 @@
 
 
            //ammo
-           
+           //ailerons
+           ctx.fillStyle = "black";
+           ctx.fillRect (235, 225, 30, 6);
+
+           ctx.fillStyle = "black";
+           ctx.fillRect (230, 230, 40, 15);
+
+
+           ctx.fillStyle = "rgb(134,34,7)";
+           ctx.fillRect (235, 230, 30, 15);
+
+           ctx.fillStyle = "black";
+           ctx.fillRect (225, 235, 50, 15);
+
+           ctx.fillStyle = "rgb(134,34,7)";
+           ctx.fillRect (230, 235, 40, 13);
+
+           //ctx.fillStyle = "black";
+           //ctx.fillRect (225, 240, 50, 10);
+
+           //ctx.fillStyle = "black";
+           //ctx.fillRect (222, 245, 56, 5);
+
+           //corps
+           ctx.fillStyle = "black";
+           ctx.fillRect (240, 200, 20, 50);
+
+           ctx.fillStyle = "white";
+           ctx.fillRect (244, 220, 12, 28);
+
+           ctx.fillStyle = "rgb(172,172,172)";
+           ctx.fillRect (248, 220, 8, 28);
+
+           ctx.fillStyle = "rgb(255,0,66)";
+           ctx.fillRect (244, 200, 12, 20);
+
+           ctx.fillStyle = "rgb(134,34,7)";
+           ctx.fillRect (248, 204, 8, 16);
+
+           ctx.fillStyle = "rgb(134,34,7)";
+           ctx.fillRect (252, 200, 4, 4);
+
+           ctx.fillStyle = "black";
+           ctx.fillRect (244, 190, 12, 10);
+
+           ctx.fillStyle= "rgb(255,0,66)";
+           ctx.fillRect (248, 190, 4, 10);
+
+           ctx.fillStyle = "black";
+           ctx.fillRect (248, 186, 4, 6);
+
+
+           //skull target
+           ctx.strokeStyle = "black";
+           ctx.fillStyle = "#ACACAC";
+           ctx.lineWidth="2";
+           ctx.fillRect(5, 15, 50, 40);
+
+           ctx.strokeStyle = "black";
+           ctx.fillStyle = "#ACACAC";
+           ctx.lineWidth="2";
+           ctx.fillRect(10, 10, 40, 20);
+
+           ctx.strokeStyle = "black";
+           ctx.fillStyle = "#ACACAC";
+           ctx.lineWidth="2";
+           ctx.fillRect(0, 20, 60, 30);
+
+           ctx.strokeStyle = "black";
+           ctx.fillStyle = "#ACACAC";
+           ctx.lineWidth="2";
+           ctx.fillRect(10, 10, 40, 20);
+
+           ctx.strokeStyle = "black";
+           ctx.fillStyle = "#ACACAC";
+           ctx.lineWidth="2";
+           ctx.fillRect(15, 50, 30, 10);
+
+           ctx.strokeStyle = "black";
+           ctx.fillStyle = "#ACACAC";
+           ctx.lineWidth="2";
+           ctx.fillRect(15, 70, 30, 10);
+
+           //teeth skull
+           ctx.strokeStyle = "black";
+           ctx.fillStyle = "#D4AF37";
+           ctx.lineWidth="2";
+           ctx.fillRect(17.5, 65, 5, 5);
+
+           ctx.strokeStyle = "black";
+           ctx.fillStyle = "#BFB6B4";
+           ctx.lineWidth="2";
+           ctx.fillRect(27.5, 65, 5, 5);
+
+           ctx.strokeStyle = "black";
+           ctx.fillStyle = "#BFB6B4";
+           ctx.lineWidth="2";
+           ctx.fillRect(37.5, 65, 5, 5);
+
+           //nose
+           ctx.fillStyle = "black";
+           ctx.fillRect (27.5, 50, 5, 5);
+
+           //eyes
+           ctx.fillStyle = "black";
+           ctx.fillRect (10, 20, 15, 25);
+
+           ctx.fillStyle = "black";
+           ctx.fillRect (35, 20, 15, 25);
+
+
+
+
+
+
+
 
 }
 </script>
